--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Static starter files",
   "main": "index.js",
   "scripts": {
+    "start": "webpack-dev-server --mode development --open",
     "dev": "NODE_ENV=development webpack --mode development --watch",
     "build": "NODE_ENV=production webpack --mode production"
   },
@@ -26,7 +27,8 @@
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.0",
     "webpack": "^4.19.0",
-    "webpack-cli": "^3.1.0"
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
     "reset-css": "^4.0.1"
